[package]
name = "axum-sso"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/dist-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25" }
local-ip-address = "0.4.9"
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }

[dependencies.clap]
version = "4.0.18"
features = ["derive"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["runtime-tokio-rustls", "postgres"]


[dependencies.sled]
version = "0.34.7"
features = []