[package]
name = "simple-sso"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Simple single sign-on based on postgresql"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/dist-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
futures = { version = "0.3.25" }
local-ip-address = "0.4.9"
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }

[dependencies.clap]
version = "4.0.18"
features = ["derive"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "json"]


[dependencies.sled]
version = "0.34.7"
features = []