[package]
name = "meta-fs"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/dist-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
uuid = "1.2.1"
avif-serialize = "0.7.6"
local-ip-address = "0.4.9"
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4.22"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]


[dependencies.sled]
version = "0.34.7"
features = []